--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
   "name": "rollup-starter-app",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.1",
-    "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.16.2",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-terser": "^5.0.0",
     "serve": "^11.0.2"
   },
   "dependencies": {
-    "@toruslabs/torus-embed": "^1.2.4",
+    "@toruslabs/torus-embed": "file:../torus-embed/toruslabs-torus-embed-1.2.6.tgz",
     "date-fns": "^1.30.1",
     "fortmatic": "^2.0.5",
     "rollup-plugin-babel": "^4.4.0"
